fix: blog scrollbar

--- a/src/components/WelcomePage/welcomePage.module.scss
+++ b/src/components/WelcomePage/welcomePage.module.scss
@@ -101,20 +101,27 @@
     margin-bottom: 2.4rem;
   }
 
-  &__body {
-    padding: 21px 37px 21px 21px;
+  &__body-container {
     border-radius: 100px;
     border: 3px solid $main_blue; 
     background: rgba(255, 255, 255, 0.12);
+    max-height: 595px;
+    overflow: hidden;
+  }
+
+  &__body {
+    padding: 21px 13px 21px 21px;
     overflow-y: scroll;
     max-height: 595px;
+    margin-right: 16px;
+
     &::-webkit-scrollbar {
       width: 8px;
       max-height: 100px;
     }
     &::-webkit-scrollbar-track {
-      margin-top: 96px;
-      margin-bottom: 96px;
+      margin-top: 94px;
+      margin-bottom: 94px;
       margin-right: 13px;
       border-radius: 10px;
       background: rgba(255, 255, 255, 0.12);
@@ -122,9 +129,7 @@
     &::-webkit-scrollbar-thumb {
       background: $main_blue;
       border-radius: 10px;
-
     }
-    
   }
   
   &__item {
