--- a/src/index.scss
+++ b/src/index.scss
@@ -26,7 +26,7 @@ body{
   padding-top: 16px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  // justify-content: space-between;
 
 }
 
